SQUASH: dev → main — security (Idempotency-Key + Cache-Control) + perf аудит (self-invocation cache fix) + Traefik rate-limit
Безопасность:
- IdempotencyKeyFilter на /api/** и /dashboard/api/** — Redis-backed in-flight lock
  (SET NX EX 24h) для POST/PUT/PATCH/DELETE. Опциональный Idempotency-Key заголовок
  (16-128 chars). Дубликат → 409 Conflict, Redis down → fail-open.
- DashboardApiCacheHeadersFilter — Cache-Control: private, no-store, no-cache,
  must-revalidate, max-age=0 на всех /dashboard/api/** для защиты PII от shared
  cache (browser / corporate proxy / CDN).
- Traefik middleware dashboard-ratelimit: 20 req/s, burst 40, per-IP на
  /dashboard/** — превышение → 429 Too Many Requests.

Производительность:
- StatsQueryService: @Lazy self-injection для срабатывания @Cacheable на nested
  overview()→topUsers/topChats/statusBreakdown. Раньше Spring AOP proxy advice
  игнорировался из-за self-invocation через this. — SQL на каждый запрос.
  Ускорение /dashboard/overview при повторных кликах ~20-50×.
- asyncio.Semaphore(10) на _notify_queue_position в Python worker — перестало
  упираться в Telegram Bot API rate limit (~30 req/sec/bot) при очереди 100+ jobs.
- application.properties: compression на text/html, text/css,
  application/javascript, image/svg+xml + min-response-size=1024. ~60% экономии
  на CSS/JS статике.
- preconnect к telegram.org (~50-100ms экономии на TLS handshake cold load).

Стабильность:
- Python worker config: model_validator с fail-fast при отсутствии
  TELEGRAM_SESSION_STRING и TELEGRAM_PHONE_NUMBER (Docker fallback на interactive
  2FA prompt = тихий hang).

Cleanup:
- PaginationUtils.clamp() — устранено дублирование в DashboardApi/MeApiController.
- Collections.singletonMap → Map.of в TelegramController.

Тесты: 14 unit IdempotencyKeyFilter + 6 DashboardApiCacheHeadersFilter.